www/flowjspixi.css
*:not(body):not(html) {
	position: fixed;
}

html {
	overflow: hidden;
	touch-action: pan-x pan-y;
	overscroll-behavior-x: none;
}

html, body {
	position: fixed;
	height: 100%;
	width: 100%;
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
	-webkit-text-stroke: 0.0px;
	-webkit-user-select: none;
	-webkit-overflow-scrolling: touch;
	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
	-moz-user-select: none;
	-ms-user-select: none;
	margin: 0px;
	padding: 0px;
}

div {
	white-space: nowrap;
}

input, textarea {
	outline: none;
	font-size: inherit;
	font-family: inherit;
	background-color: inherit;
	color: inherit;
	border: none;
	margin-top: -1px;
	padding: 0px;
	pointer-events: auto;
	touch-action: pan-x pan-y;
	-webkit-font-smoothing: antialiased;
}

input::-ms-clear, input::-ms-reveal {
	width : 0;
	height: 0;
	display: none;
}

iframe {
	z-index: 1;
	pointer-events: auto; /* In case it's inside container with pointer-events:none*/
	-ms-user-select: text;
}

svg {
	overflow: visible;
}

*:focus {
	outline: 0px;
}

.hiddenByAlpha {
	display : none;
}

.accessButton {
	pointer-events: none;	/*It should not catch events*/
	background-color: transparent;
	border-style: none;
	padding: 0px;
	margin: 0px;
	display: block;
}

.accessElement {
	pointer-events: none;	/*It should not catch events*/
}

.nativeWidget {
	transform-origin: left top;
	position: absolute;
	padding: 0px;
	margin: 0px;
	pointer-events: none;
	display: block;
	cursor: inherit;
	left: 0px;
	top: 0px;
	transform: none;
	z-index: inherit;
}

.nativeScroll {
    -ms-overflow-style: none;  /* Internet Explorer 10+ */
	scrollbar-width: none;  /* Firefox */
}
.nativeScroll::-webkit-scrollbar {
    display: none;  /* Safari and Chrome */
}

.textWidget {
	white-space: pre;
	font-family: Roboto;
	font-weight: 400;
	font-style: normal;
	direction: ltr;
	text-align: left;
	background: none;
	transform: translateZ(0);
}

.focused {
	border-style: solid;
	border-color: #0098d0;
	border-width: 2px;
	box-shadow: 0px 0px 4px;
}

.baselineWidget {
	display: inline-block;
	position: relative;
}

.inlineWidget {
	display: inline;
	position: relative;
}

:root {
    --sat: env(safe-area-inset-top);
    --sar: env(safe-area-inset-right);
    --sab: env(safe-area-inset-bottom);
    --sal: env(safe-area-inset-left);
}

